Wed Jan 24 18:55:21 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Merged Irssi SVN (irssi 0.8.11).  Affected files in apps/irssi/.

Tue Jan 23 16:05:27 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* The silc_schedule_set_listen_fd now returns boolean value.
	  Fixed FD task adding to check correctly for already added
	  FD tasks.  Added stricter error checking for FD scheduling
	  with epoll().  Affected files are lib/silcutil/silcschedule.[ch]
	  and lib/silcutil/unix/silcunixschedule.c.

	* The silc_stream_set_notifier now returns boolean value.  Changed
	  all streams to support and check for the error condition.
	  Affected files are in lib/silcutil/.

	* Fixed SKE library session aborting and deletion.  Affected
	  file are lib/silcske/silcske.c.

Tue Jan 16 18:22:08 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Implemented PKCS #1 with appendix with hash OID in the
	  signature.  Affected files are lib/silccrypt/silcpkcs1.[ch],
	  lib/silccrypt/silchash.[ch] and 
	  lib/silcasn1/silcasn1[_encode|decode].[ch].

Sun Jan 14 23:12:41 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added support for Version (V) SILC public key identifier.
	  Affected files are lib/silccrypt/silcpk.[ch].

Tue Jan  9 19:37:51 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Rewrote connection auth request in client library.  It is now
	  done automatically by the library and the resolved method given
	  as a hint to get_auth_method client operation.  Affected files
	  are lib/silcclient/.

Wed Jan  3 18:06:33 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_packet_stream_wrap into lib/silccore/silcpacket.[ch].
	  It can be used to wrap SilcPacketStream into SilcStream.

	* Fixed %p formatting from silc_snprintf.  Affected file is
	  lib/silcutil/silcsnprintf.c.

	* Ported SFTP library to new utility library.  Ported also
	  the SFTP testers.  Affected files in lib/silcsftp/.

Tue Jan  2 17:18:46 EET 2007  Pekka Riikonen <priikone@silcnet.org>
