@@ -1,3 +1,8 @@
+Sat Jan 27 22:37:30 EET 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added SilcRwLock API, a read/write lock.  Affected files are
+	  lib/silcutil/silcmutex.h and in lib/silcutil/[unix|win32|symbian]/.
+
 Wed Jan 24 18:55:21 EET 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Merged Irssi SVN (irssi 0.8.11).  Affected files in apps/irssi/.
@@ -21,7 +26,7 @@ Tue Jan 16 18:22:08 EET 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Implemented PKCS #1 with appendix with hash OID in the
 	  signature.  Affected files are lib/silccrypt/silcpkcs1.[ch],
-	  lib/silccrypt/silchash.[ch] and 
+	  lib/silccrypt/silchash.[ch] and
 	  lib/silcasn1/silcasn1[_encode|decode].[ch].
 
 Sun Jan 14 23:12:41 EET 2007  Pekka Riikonen <priikone@silcnet.org>
